--- a/app/templates/capacity_visualization.html
+++ b/app/templates/capacity_visualization.html
@@ -22,8 +22,8 @@
 
 <body>
 <h1>テスト用サンプルデータ</h1>
-  <div>
-    <button type="button" id="download_button">Download</button>
+  <div id="download_button">
+    <span>ダウンロード</span>
   </div>
   <!-- <div>
     <label for="upload_button">ファイルを選択: </label>
