--- a/app/dev_statics/css/capacity_visualization.css
+++ b/app/dev_statics/css/capacity_visualization.css
@@ -14,7 +14,9 @@ h1:after {
 
 .control_panel {
   position: relative;
-  margin: 2em 0;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  margin-right: 40%;
   padding: 0.5em 1em;
   border: solid 3px #95ccff;
   border-radius: 8px;
@@ -124,7 +126,7 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
 }
 
 .draggable {
-  opacity: 0.9;
+  opacity: 0.8;
   stroke: silver;
   stroke-width: 1;
   rx: 1;
@@ -135,7 +137,7 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   background: linear-gradient(to right, #FFFF66 0%, #FFFF66 100%);
 }
 
-#download_button span {
+#download_button {
   background: #DDD;
   border-radius: 3px;
   position: relative;
@@ -151,7 +153,7 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
 }
 
-#download_button span:after {
+#download_button:after {
   content: "";
   position: absolute;
   top: 50%;
@@ -169,11 +171,11 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   transform: translateY(-50%) rotate(45deg);
 }
 
-#download_button span:hover {
+#download_button:hover {
   background: #6bb6ff;
   color: #FFF;
 }
 
-#download_button span:hover:after {
+#download_button:hover:after {
   right: 1.4rem;
 }
