--- a/app/templates/capacity_visualization.html
+++ b/app/templates/capacity_visualization.html
@@ -22,8 +22,8 @@
 
 <body>
 <h1>テスト用サンプルデータ</h1>
-  <div id="download_button">
-    <span>ダウンロード</span>
+  <div>
+    <span id="download_button">ダウンロード</span>
   </div>
   <!-- <div>
     <label for="upload_button">ファイルを選択: </label>
