--- a/app/templates/capacity_visualization.html
+++ b/app/templates/capacity_visualization.html
@@ -21,14 +21,16 @@
 </head>
 
 <body>
-<h1>テスト用サンプルデータ</h1>
-  <div>
-    <span id="download_button">ダウンロード</span>
+  <h1>テスト用サンプルデータ</h1>
+  <div class="flex_container">
+    <span class="button_span" id="download_span">ダウンロード</span>
+    <span class="button_span">テストテキスト</span>
+    <span class="button_span">テストテキスト</span>
   </div>
   <!-- <div>
-    <label for="upload_button">ファイルを選択: </label>
-    <input type="file" id="upload_button">
-  </div> -->
+      <label for="upload_button">ファイルを選択: </label>
+      <input type="file" id="upload_button">
+    </div> -->
 
 
 
@@ -47,8 +49,14 @@
     <div>
       <a href="https://newsroom.mazda.com/ja/publicity/release/" target="_blank">MC生産台数実績　確認</a>
     </div>
-    <label for="co-input">係数スライダ(0.50〜1.50): </label>
-    <input type="range" name="coefficient" id="co-input" min="0.5" max="1.5" step="0.01" value="1.0">
+    <div>
+      <label for="co-input">係数スライダ(0.50〜2.00): </label>
+      <input type="range" id="co-input" min="0.5" max="2.0" step="0.01" value="1.0">
+    </div>
+    <div>
+      <label for="co-label">係数反映対象： </label>
+      <input type="text" id="co-label" value="実測">
+    </div>
     <div>
       <span>稼働算出見込み前提(台/月): </span>
       <span id="pd-v"></span>
