--- a/app/dev_statics/css/capacity_visualization.css
+++ b/app/dev_statics/css/capacity_visualization.css
@@ -125,6 +125,10 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   background: #ffcccc;
 }
 
+.axis-label {
+  font-size: 1.3em;
+}
+
 
 .draggable {
   opacity: 0.7;
