--- a/app/templates/capacity_visualization.html
+++ b/app/templates/capacity_visualization.html
@@ -24,8 +24,7 @@
   <h1>テスト用サンプルデータ</h1>
   <div class="flex_container">
     <span class="button_span" id="download_span">ダウンロード</span>
-    <span class="button_span">テストテキスト</span>
-    <span class="button_span">テストテキスト</span>
+    <span class="button_span" id="upload_span">アップロード</span>
   </div>
   <!-- <div>
       <label for="upload_button">ファイルを選択: </label>
