--- a/app/templates/capacity_visualization.html
+++ b/app/templates/capacity_visualization.html
@@ -24,7 +24,7 @@
 
   <section>
 
-    <h1>テスト用サンプルデータ</h1>
+    <h1>Capacity Visualizer</h1>
 
     <div class="control_panel sticky-item">
       <span class="control_title">コントロール</span>
@@ -54,7 +54,10 @@
 
     <div class="flex_container">
       <span class="button_span" id="download_span">ダウンロード</span>
-      <span class="button_span" id="upload_span">アップロード</span>
+
+      <label class="button_span" id="upload_label">
+        <input type="file" id="upload_input">アップロード
+      </label>
     </div>
     <!-- <div>
       <label for="upload_button">ファイルを選択: </label>
