--- a/app/staticfiles/css/capacity_visualization.css
+++ b/app/staticfiles/css/capacity_visualization.css
@@ -13,6 +13,7 @@ h1:after {
 }
 
 #my_dataviz {
+  display: none;
   margin: 5px auto 20px auto;
   user-select: none;
   border: solid;
@@ -21,6 +22,40 @@ h1:after {
   border-color: silver;
   box-shadow: 3px 3px 6px 2px #555,
     3px 3px 10px 3px rgba(255, 255, 255, 0.8) inset;
+}
+
+.notion-parent {
+  display: flex;
+  justify-content: space-around;
+}
+
+#upload-notion {
+  font-size: 1.7em;
+  position: relative;
+  text-align: center;
+  padding: 0.25em 1em;
+  margin: 100px auto auto auto;
+  width: 50%;
+  border-top: solid 2px black;
+  border-bottom: solid 2px black;
+}
+
+#upload-notion:before, #upload-notion:after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  width: 2px;
+  height: -webkit-calc(100% + 20px);
+  height: calc(100% + 20px);
+  background-color: black;
+}
+
+#upload-notion:before {
+  left: 10px;
+}
+
+#upload-notion:after {
+  right: 10px;
 }
 
 #co-input {
@@ -223,7 +258,14 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   color: #FFF;
 }
 
-#upload_span:hover {
+input[type="file"] {
+  /* -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; */
+  display: none;
+}
+
+#upload_label:hover {
   background: #ef4645;
   color: #FFF;
 }
@@ -238,7 +280,7 @@ table tr td:nth-of-type(7), table tr th:nth-of-type(7) {
   box-shadow: 2px 2px 4px #555 inset;
 }
 
-#upload_span:active {
+#upload_label:active {
   transition: 0.2s ease-in-out;
   color: black;
   box-shadow: 2px 2px 4px #555 inset;
