--- a/app/templates/sample.html
+++ b/app/templates/sample.html
@@ -86,7 +86,7 @@
     } from "https://cdn.skypack.dev/d3-drag@3";
     const handler = drag();
   </script>
-  <script src="{% static '/js/capacity_visualization.js' %}"></script>
+  <script src="{% static '/js/sample.js' %}"></script>
 
 
 </body>
